--- a/11-workshop/mobile_services/web/my-app/app/globals.css
+++ b/11-workshop/mobile_services/web/my-app/app/globals.css
@@ -20,7 +20,7 @@
 }
 
 input {
-  @apply p-2 rounded-md border border-gray-300;
+  @apply p-2 rounded-md border border-gray-300 w-full;
 }
 
 body {
@@ -29,4 +29,13 @@ body {
 
 .signin-box button {
   @apply mt-4 bg-teal-600 text-white px-6 py-2 rounded-md;
+}
+
+.btn {
+  @apply bg-teal-600 text-white px-6 py-2 rounded-md;
+}
+
+.content-header {
+  @apply text-2xl font-bold mb-5 pt-5 pb-3 border-b-2 border-teal-600 text-teal-600
+  /* @apply text-2xl font-bold mb-5 bg-gray-200 p-5 rounded-lg shadow-lg shadow-gray-500; */
 }
